--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.2.1
   provider: ^6.1.2
+  android_alarm_manager_plus: ^3.0.4
+  flutter_local_notifications: ^16.3.2
+  rxdart: ^0.27.7
+  intl: ^0.19.0
+  shared_preferences: ^2.2.2
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
